Add section search

--- a/index.html
+++ b/index.html
@@ -97,7 +97,37 @@
             <p data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
               incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
               laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">hello</a>
+          </div>
+        </div>
+        <div class="container hero-search">
+          <div class="hero-search-filter-container">
+            <div class="hero-search-filter-input-container">
+              <div class="hero-search-filter-textBox">
+                <i class="bi bi-search"></i>
+                <input type="text" name="" id="" class="form-control" placeholder="Nhập từ khóa tìm kiếm">
+              </div>
+              <div class="hero-search-filter-dropdown hero-search-filter-dropdown-job">
+                <select id="cars" name="job-list" class="list-jobs">
+                  <option value="" hidden>Ngành nghề</option>
+                  <option value="volvo">Công nghệ thông tin</option>
+                  <option value="saab">Quản trị kinh doanh</option>
+                  <option value="opel">Opel</option>
+                  <option value="audi">Audi</option>
+                </select>
+              </div>
+              <div class="hero-search-filter-dropdown hero-search-filter-dropdown-address">
+                <select id="jpb" name="job-address" class="list-address">
+                  <option value="" hidden>Địa điểm</option>
+                  <option value="volvo">Thành phố Hà Nội</option>
+                  <option value="saab">Thành phố Hồ Chí Minh</option>
+                  <option value="opel">Opel</option>
+                  <option value="audi">Audi</option>
+                </select>
+              </div>
+            </div>
+            <div class="hero-search-button">
+              <button class="btn" tabindex="0">Tìm kiếm</button>
+            </div>
           </div>
         </div>
       </div>
