--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction Bootstrap Template - Index</title>
+  <title>UpConstruction</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,13 +30,6 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: UpConstruction - v1.3.0
-  * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -55,31 +48,12 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="index.html" class="active">Trang chủ</a></li>
+          <li><a href="about.html">Về Chúng tôi</a></li>
+          <li><a href="services.html">Dịch vụ</a></li>
+          <li><a href="projects.html">Dự Án</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i
-                class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i
-                    class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Liên lạc</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -93,10 +67,10 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Welcome to <span>UpConstruction</span></h2>
-            <p data-aos="fade-up">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-              laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h2 data-aos="fade-down">Chào mừng tới <span>UpConstruction</span></h2>
+            <p data-aos="fade-up">Chúng tôi luôn tìm kiếm những tài năng mới, đầy nhiệt huyết và sáng tạo để cùng nhau phát triển và tạo nên sự khác biệt.
+              Tại đây, bạn sẽ tìm thấy những cơ hội việc làm đa dạng, từ các vị trí khởi đầu đến các vị trí quản lý cao cấp.
+              Hãy sử dụng công cụ tìm kiếm bên dưới để khám phá cơ hội phù hợp với bạn và trở thành một phần của đội ngũ chúng tôi!</p>
           </div>
         </div>
         <div class="container hero-search">
@@ -110,18 +84,16 @@
                 <select id="cars" name="job-list" class="list-jobs">
                   <option value="" hidden>Ngành nghề</option>
                   <option value="volvo">Công nghệ thông tin</option>
-                  <option value="saab">Quản trị kinh doanh</option>
-                  <option value="opel">Opel</option>
-                  <option value="audi">Audi</option>
+                  <option value="saab">Kinh doanh</option>
+                  <option value="opel">Hành chính nhân sự</option>
+                  <option value="audi">Tester</option>
                 </select>
               </div>
               <div class="hero-search-filter-dropdown hero-search-filter-dropdown-address">
                 <select id="jpb" name="job-address" class="list-address">
                   <option value="" hidden>Địa điểm</option>
                   <option value="volvo">Thành phố Hà Nội</option>
-                  <option value="saab">Thành phố Hồ Chí Minh</option>
-                  <option value="opel">Opel</option>
-                  <option value="audi">Audi</option>
+                  <option value="saab">Thành phố Hồ Chí Minh</option>on>
                 </select>
               </div>
             </div>
