--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>UpConstruction</title>
+  <title>IT Solutions</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,7 +41,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>UpConstruction<span>.</span></h1>
+        <h1>IT Solutions<span>.</span></h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2 data-aos="fade-down">Chào mừng tới <span>UpConstruction</span></h2>
+            <h2 data-aos="fade-down">Chào mừng tới <span>IT Solutions</span></h2>
             <p data-aos="fade-up">Chúng tôi luôn tìm kiếm những tài năng mới, đầy nhiệt huyết và sáng tạo để cùng nhau phát triển và tạo nên sự khác biệt.
               Tại đây, bạn sẽ tìm thấy những cơ hội việc làm đa dạng, từ các vị trí khởi đầu đến các vị trí quản lý cao cấp.
               Hãy sử dụng công cụ tìm kiếm bên dưới để khám phá cơ hội phù hợp với bạn và trở thành một phần của đội ngũ chúng tôi!</p>
@@ -136,20 +136,17 @@
 
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-up">
             <div class="content">
-              <h3>Minus hic non reiciendis ea possimus at quia.</h3>
-              <p>Rem id rerum. Debitis deserunt quidem delectus expedita ducimus dolor. Aut iusto ipsa. Eos ipsum nobis
-                ipsa soluta itaque perspiciatis fuga ipsum perspiciatis. Eum amet fugiat totam nisi possimus ut delectus
-                dicta.
-              <p>Aliquam velit deserunt autem. Inventore et saepe. Tenetur suscipit eligendi labore culpa eos. Deserunt
-                porro magni qui necessitatibus dolorem at animi cupiditate.</p>
+              <h4>Chúng tôi luôn sẵn sàng nhận phản hồi từ bạn.</h4>
+              <p>Về vấn đề công nghệ mà doanh nghiệp bạn đang gặp phải, chúng tôi có thể giải quyết một cách nhanh chóng và hiệu quả. Với đội ngũ chuyên gia giàu kinh nghiệm, chúng tôi đảm bảo cung cấp các giải pháp chính xác và đáng tin cậy. Chúng tôi cam kết xử lý mọi thử thách một cách toàn diện, đảm bảo mọi khía cạnh kỹ thuật đều được chăm sóc tỉ mỉ và chu đáo.</p>
+              <p>Chúng tôi luôn tìm tòi và phát triển các giải pháp công nghệ mới, không ngừng sáng tạo để mang đến những giá trị tốt nhất cho khách hàng. Với tinh thần trách nhiệm cao, chúng tôi cam kết đáp ứng mọi yêu cầu và đảm bảo sự hài lòng, đồng thời luôn sẵn sàng hỗ trợ khách hàng một cách tận tâm và chuyên nghiệp.</p>
             </div>
           </div>
 
           <div class="col-lg-5" data-aos="fade">
             <form action="forms/quote.php" method="post" class="php-email-form">
-              <h3>Get a quote</h3>
-              <p>Vel nobis odio laboriosam et hic voluptatem. Inventore vitae totam. Rerum repellendus enim linead sero
-                park flows.</p>
+              <h3>Nhận yêu cầu</h3>
+              <p>Chúng tôi luôn sẵn sàng giải quyết những vấn đề công nghệ phức tạp, mang lại giải pháp tối ưu cho mọi yêu cầu. Tập trung vào sự sáng tạo và đổi mới trong từng dự án, chúng tôi cam kết mang đến sản phẩm chất lượng và đảm bảo tiến độ.
+                Chúng tôi không ngừng phát triển các giải pháp công nghệ tiên tiến để đáp ứng nhu cầu ngày càng cao của khách hàng, đảm bảo mọi quy trình hoạt động hiệu quả và bền vững.</p>
               <div class="row gy-3">
 
                 <div class="col-md-12">
@@ -173,7 +170,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your quote request has been sent successfully. Thank you!</div>
 
-                  <button type="submit">Get a quote</button>
+                  <button type="submit">Gửi đi</button>
                 </div>
 
               </div>
@@ -190,9 +187,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Constructions</h2>
-          <p>Nulla dolorum nulla nesciunt rerum facere sed ut inventore quam porro nihil id ratione ea sunt quis dolorem
-            dolore earum</p>
+          <h2>Công trình dự án</h2>
+          <p>Khám phá các giải pháp công nghệ tiên tiến và hiệu quả mà chúng tôi đã triển khai thành công cho các đối tác trên toàn cầu.</p>
         </div>
 
         <div class="row gy-4">
@@ -205,9 +201,9 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Eligendi omnis sunt veritatis.</h4>
-                    <p>Fuga in dolorum et iste et culpa. Commodi possimus nesciunt modi voluptatem placeat deleniti
-                      adipisci. Cum delectus doloribus non veritatis. Officia temporibus illo magnam. Dolor eos et.</p>
+                    <h4 class="card-title"> Hệ Thống Quản Lý Doanh Nghiệp.</h4>
+                    <p>Chúng tôi đã triển khai một hệ thống quản lý doanh nghiệp toàn diện cho một công ty sản xuất lớn. Dự án bao gồm việc phát triển phần mềm tùy chỉnh giúp quản lý kho, đơn hàng,
+                      và báo cáo tài chính. Hệ thống này đã giúp tăng hiệu quả vận hành và giảm thiểu sai sót trong quản lý.</p>
                   </div>
                 </div>
               </div>
@@ -222,10 +218,9 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Possimus ut sed velit assumenda</h4>
-                    <p>Sunt deserunt maiores voluptatem autem est rerum perferendis rerum blanditiis. Est laboriosam qui
-                      iste numquam laboriosam voluptatem architecto. Est laudantium sunt at quas aut hic. Eum
-                      dignissimos.</p>
+                    <h4 class="card-title">Ứng Dụng Di Động Cho Ngành Y Tế</h4>
+                    <p>Chúng tôi đã phát triển một ứng dụng di động tích hợp công nghệ AI để hỗ trợ bác sĩ trong việc chẩn đoán bệnh. Ứng dụng cung cấp các công cụ phân tích
+                      dữ liệu bệnh nhân và giúp theo dõi tình trạng sức khỏe theo thời gian thực. Đây là một giải pháp tiên tiến nhằm cải thiện chất lượng dịch vụ y tế.</p>
                   </div>
                 </div>
               </div>
@@ -240,10 +235,11 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Error beatae dolor inventore aut</h4>
-                    <p>Dicta porro nobis. Velit cum in. Nesciunt dignissimos enim molestiae facilis numquam quae quaerat
-                      ipsam omnis. Neque debitis ipsum at architecto officia laboriosam odit. Ut sunt temporibus nulla
-                      culpa.</p>
+                    <h4 class="card-title">Trang Web Thương Mại Điện Tử</h4>
+                    <p>Dự án này bao gồm việc thiết kế và triển khai một trang web thương mại điện tử cho một chuỗi cửa hàng thời trang.
+                      Chúng tôi đã tích hợp các tính năng mua sắm trực tuyến, thanh toán an toàn, và hệ thống quản lý đơn hàng. Kết quả là, khách hàng có thể mua sắm dễ dàng hơn và doanh thu của khách hàng tăng đáng kể.
+
+                    </p>
                   </div>
                 </div>
               </div>
@@ -258,10 +254,9 @@
                 </div>
                 <div class="col-xl-7 d-flex align-items-center">
                   <div class="card-body">
-                    <h4 class="card-title">Expedita voluptas ut ut nesciunt</h4>
-                    <p>Aut est quidem doloremque voluptatem magnam quis excepturi vero quia. Eum eos doloremque
-                      architecto illo at beatae dolore. Fugiat suscipit et sint ratione dolores. Aut aliquid ea dolores
-                      libero nobis.</p>
+                    <h4 class="card-title">Giải Pháp Bảo Mật Mạng Toàn Diện</h4>
+                    <p>Chúng tôi đã cung cấp một giải pháp bảo mật mạng toàn diện cho một ngân hàng lớn. Dự án bao gồm việc triển khai các công nghệ bảo mật tiên tiến như tường lửa, hệ thống phát hiện xâm nhập, và mã hóa dữ liệu.
+                      Giải pháp này đã bảo vệ hệ thống của ngân hàng khỏi các cuộc tấn công mạng và đảm bảo an toàn cho thông tin khách hàng.</p>
                   </div>
                 </div>
               </div>
@@ -278,9 +273,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Services</h2>
-          <p>Voluptatem quibusdam ut ullam perferendis repellat non ut consequuntur est eveniet deleniti fignissimos eos
-            quam</p>
+          <h2>Dịch vụ chúng tôi cung cấp</h2>
+          <p>Các Dịch Vụ Công Nghệ Toàn Diện Được Tinh Chỉnh Để Mang Lại Hiệu Quả Cao Nhất Cho Doanh Nghiệp Của Bạn</p>
         </div>
 
         <div class="row gy-4">
@@ -882,7 +876,7 @@
 
     <!-- ======= Recent Blog Posts Section ======= -->
     <section id="recent-blog-posts" class="recent-blog-posts">
-      <div class="container" data-aos="fade-up"">
+      <div class="container" data-aos="fade-up">
 
     
     
