--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
               <div class="icon">
                 <i class="fa-solid fa-mountain-city"></i>
               </div>
-              <h3>Nesciunt Mete</h3>
-              <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis
-                tempore et consequatur.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Phát Triển Phần Mềm Tùy Chỉnh</h3>
+              <p>Chúng tôi cung cấp các giải pháp phần mềm tùy chỉnh,
+                từ ứng dụng di động đến hệ thống quản lý doanh nghiệp, giúp đáp ứng nhu cầu cụ thể của từng khách hàng và tối ưu hóa quy trình làm việc..</p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -297,10 +297,10 @@
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
-              <h3>Eosle Commodi</h3>
-              <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
-                nesciunt dolorem.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Tư Vấn Công Nghệ Thông Tin</h3>
+              <p>Đội ngũ chuyên gia của chúng tôi cung cấp tư vấn chiến lược công nghệ, giúp doanh nghiệp xây dựng kế hoạch công nghệ hiệu quả,
+                lựa chọn giải pháp phù hợp và triển khai thành công..</p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -310,10 +310,9 @@
               <div class="icon">
                 <i class="fa-solid fa-compass-drafting"></i>
               </div>
-              <h3>Ledo Markt</h3>
-              <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
-                eos earum corrupti.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Dịch Vụ Bảo Mật Hệ Thống</h3>
+              <p>Đảm bảo an toàn cho dữ liệu và hệ thống của bạn với các giải pháp bảo mật hàng đầu. Chúng tôi cung cấp kiểm tra lỗ hổng, bảo mật mạng và bảo vệ dữ liệu nhạy cảm.</p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -323,10 +322,11 @@
               <div class="icon">
                 <i class="fa-solid fa-trowel-bricks"></i>
               </div>
-              <h3>Asperiores Commodit</h3>
-              <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
-                adipisci neque.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Phát Triển Web và Thiết Kế Giao Diện</h3>
+              <p>Chúng tôi thiết kế và phát triển các trang web hiện đại và tối ưu hóa trải nghiệm người dùng,
+                từ trang web doanh nghiệp đến các ứng dụng web phức tạp, đảm bảo giao diện đẹp và chức năng mạnh mẽ.
+              </p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -336,10 +336,10 @@
               <div class="icon">
                 <i class="fa-solid fa-helmet-safety"></i>
               </div>
-              <h3>Velit Doloremque</h3>
-              <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem
-                alias eius labore.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Dịch Vụ Đám Mây và Lưu Trữ</h3>
+              <p>Cung cấp các giải pháp đám mây linh hoạt và an toàn cho lưu trữ và quản lý dữ liệu.
+                Chúng tôi giúp doanh nghiệp dễ dàng mở rộng và quản lý tài nguyên đám mây theo nhu cầu.</p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -349,10 +349,10 @@
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
-              <h3>Dolori Architecto</h3>
-              <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
-                recusandae ducimus enim.</p>
-              <a href="service-details.html" class="readmore stretched-link">Learn more <i
+              <h3>Hỗ Trợ và Bảo Trì Hệ Thống</h3>
+              <p>Đảm bảo hệ thống của bạn hoạt động ổn định với dịch vụ hỗ trợ và bảo trì liên tục.
+                Chúng tôi cung cấp các dịch vụ bảo trì, khắc phục sự cố và nâng cấp để duy trì hiệu suất tối ưu.</p>
+              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
                   class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
