--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
               <p>
                 Nhóm 2 <br>
                 Học viện Công nghệ Bưu Chính Viễn Thông, Viet Nam<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
+                <strong>Phone:</strong> +8499999999<br>
                 <strong>Email:</strong> ptit@edu.vn<br>
               </p>
               <div class="social-links d-flex mt-3">
