done page 6 service details

--- a/services.html
+++ b/services.html
@@ -89,45 +89,45 @@
         <div class="row gy-4">
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item  position-relative">
+            <div class="service-item service-1 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-mountain-city"></i>
               </div>
               <h3>Phát Triển Phần Mềm Tùy Chỉnh</h3>
               <p>Chúng tôi cung cấp các giải pháp phần mềm tùy chỉnh,
                 từ ứng dụng di động đến hệ thống quản lý doanh nghiệp, giúp đáp ứng nhu cầu cụ thể của từng khách hàng và tối ưu hóa quy trình làm việc..</p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-1.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="service-item position-relative">
+            <div class="service-item service-2 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
               <h3>Tư Vấn Công Nghệ Thông Tin</h3>
               <p>Đội ngũ chuyên gia của chúng tôi cung cấp tư vấn chiến lược công nghệ, giúp doanh nghiệp xây dựng kế hoạch công nghệ hiệu quả,
                 lựa chọn giải pháp phù hợp và triển khai thành công..</p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-2.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="service-item position-relative">
+            <div class="service-item service-3 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-compass-drafting"></i>
               </div>
               <h3>Dịch Vụ Bảo Mật Hệ Thống</h3>
               <p>Đảm bảo an toàn cho dữ liệu và hệ thống của bạn với các giải pháp bảo mật hàng đầu. Chúng tôi cung cấp kiểm tra lỗ hổng, bảo mật mạng và bảo vệ dữ liệu nhạy cảm.</p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-3.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item position-relative">
+            <div class="service-item service-4 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-trowel-bricks"></i>
               </div>
@@ -135,33 +135,33 @@
               <p>Chúng tôi thiết kế và phát triển các trang web hiện đại và tối ưu hóa trải nghiệm người dùng,
                 từ trang web doanh nghiệp đến các ứng dụng web phức tạp, đảm bảo giao diện đẹp và dễ sử dụng.
               </p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-4.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
-            <div class="service-item position-relative">
+            <div class="service-item service-5 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-helmet-safety"></i>
               </div>
               <h3>Dịch Vụ Đám Mây và Lưu Trữ</h3>
               <p>Cung cấp các giải pháp đám mây linh hoạt và an toàn cho lưu trữ và quản lý dữ liệu.
                 Chúng tôi giúp doanh nghiệp dễ dàng mở rộng và quản lý tài nguyên đám mây theo nhu cầu.</p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-5.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
-            <div class="service-item position-relative">
+            <div class="service-item service-6 position-relative">
               <div class="icon">
                 <i class="fa-solid fa-arrow-up-from-ground-water"></i>
               </div>
               <h3>Hỗ Trợ và Bảo Trì Hệ Thống</h3>
               <p>Đảm bảo hệ thống của bạn hoạt động ổn định với dịch vụ hỗ trợ và bảo trì liên tục.
                 Chúng tôi cung cấp các dịch vụ bảo trì, khắc phục sự cố và nâng cấp để duy trì hiệu suất tối ưu.</p>
-              <a href="service-details.html" class="readmore stretched-link">Chi tiết <i
+              <a href="service-details-6.html" class="readmore stretched-link">Chi tiết <i
                       class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
