--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               <div class="row gy-3">
 
                 <div class="col-md-12">
-                  <input type="text" name="name" class="form-control" placeholder="Name" required>
+                  <input type="text" name="name" class="form-control" placeholder="Tên của bạn" required>
                 </div>
 
                 <div class="col-md-12 ">
@@ -164,11 +164,11 @@
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="phone" placeholder="Phone" required>
+                  <input type="text" class="form-control" name="phone" placeholder="Số điện thoại" required>
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
+                  <textarea class="form-control" name="message" rows="6" placeholder="Lời nhắn" required></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
